# graphics-rs

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
algebra/: Cargo.toml
algebra/src/: linear.rs
algebra/src/linear/: array.rs  matrix.rs  transformation.rs  vector.rs
algebra/src/linear/transformation/: skew.rs  translation.rs
geometry/: Cargo.toml
geometry/src/: figure.rs  lib.rs  model_2d.rs  point.rs  shape.rs  traits.rs
geometry/src/figure/: circle.rs  ellipse.rs  mesh.rs  path.rs  point.rs  polygon.rs  polyline.rs  rectangle.rs  segment.rs  triangle.rs
geometry/src/figure/mesh/: edge.rs
geometry/src/figure/path/: command.rs
geometry/src/model_2d/: circle.rs  ellipse.rs  mesh.rs  path.rs  point.rs  polygon.rs  polyline.rs  rectangle.rs  segment.rs
geometry/src/model_2d/path/: command.rs
geometry/src/point/: point_2d.rs  point_3d.rs
geometry/src/shape/: circle.rs  ellipse.rs  mesh.rs  path.rs  point.rs  polygon.rs  polyline.rs  rectangle.rs  segment.rs
id-derive/: Cargo.toml
id-derive/src/: lib.rs
interactivity/: Cargo.toml
interactivity/src/: lib.rs  tool.rs
interactivity/src/tool/: click_draw_tool.rs  draw_tool.rs  move_draw_tool.rs  select_tool.rs
lib/algebra/: Cargo.toml
lib/algebra/src/: lib.rs  linear.rs
lib/core/: Cargo.toml
lib/core-derive/: Cargo.toml
lib/core-derive/src/: lib.rs
lib/core/src/: container.rs  entity.rs  feature_set.rs  interactivity.rs  lib.rs
lib/core/src/entity/: feature.rs  (+1 more)
lib/element-view/: Cargo.toml
lib/element-view/src/: lib.rs
lib/entity-model-feature/: Cargo.toml
lib/entity-model-feature-derive/: Cargo.toml
lib/entity-model-feature-derive/src/: lib.rs
lib/entity-model-feature/src/: container.rs  entity.rs  entity_id.rs  feature_set.rs  lib.rs
lib/event-handler/: Cargo.toml
lib/event-handler/src/: lib.rs
lib/geometry/: Cargo.toml
lib/geometry/src/: figure.rs  lib.rs  math.rs  point.rs  transformation.rs
lib/interactivity/: Cargo.toml
lib/interactivity/src/: channel.rs  lib.rs  tool.rs
lib/plugin-rendering/: Cargo.toml
lib/plugin-rendering/src/: lib.rs  style.rs
lib/plugin-standard/: Cargo.toml
lib/plugin-standard/src/: behaviour.rs  lib.rs  view_port.rs
lib/plugin/plugin-standard/: Cargo.toml
lib/plugin/rendering-plugin/: Cargo.toml
lib/rendering/: Cargo.toml
lib/rendering/src/: behaviour.rs  lib.rs
lib/standard-plugin/: Cargo.toml
lib/standard-plugin/src/: entity.rs  lib.rs
lib/view-port/: Cargo.toml
lib/view-port/src/: container_view.rs  element.rs  element_view.rs  geometric.rs  identifier.rs  lib.rs  text_view.rs
model/src/: lib.rs
parametric/: Cargo.toml
parametric/src/: entity.rs  id.rs  lib.rs  model.rs  model_2d.rs  model_3d.rs  param.rs
plugin/standard-entity-plugin/: Cargo.toml
plugin/standard-entity-plugin/src/: entity.rs  entity_model.rs  lib.rs  model.rs
plugin/standard-entity-plugin/src/entity/: container_entity.rs  geometric.rs  text_entity.rs
plugin/standard-entity-plugin/src/entity/container_entity/: feature.rs
plugin/standard-entity-plugin/src/entity/geometric/: point_entity.rs  polygon_entity.rs  rectangle_entity.rs  segment_entity.rs
plugin/standard-entity-plugin/src/entity/geometric/polygon_entity/: feature.rs
plugin/standard-entity-plugin/src/entity/geometric/rectangle_entity/: feature.rs
plugin/standard-entity-plugin/src/model/: container_model.rs  free_hand_model.rs  geometric.rs  path_model.rs  text_model.rs
plugin/standard-entity-plugin/src/model/geometric/: polygon_model.rs  rectangle_model.rs
plugin/standard-feature-plugin/: Cargo.toml
plugin/standard-feature-plugin/src/: lib.rs
plugin/standard-rendering-plugin/: Cargo.toml
plugin/standard-rendering-plugin/src/: lib.rs  renderable.rs  renderer.rs  style.rs
plugin/standard-rendering-plugin/src/renderer/: renderer.rs  renderer_incremental.rs
plugin/standard-rendering-plugin/src/renderer/renderer/: light.rs
plugin/standard-rendering-plugin/src/style/: color.rs  shape_style.rs  surface_style.rs  text_style.rs
plugin/standard-svg-plugin/: Cargo.toml
plugin/standard-svg-plugin/src/: incremental_svg_renderer.rs  lib.rs  property_map.rs  styles.rs  svg_element.rs
plugin/standard-tool-plugin/: Cargo.toml
plugin/standard-tool-plugin/src/: lib.rs  tool.rs  traits.rs
plugin/standard-tool-plugin/src/tool/: draw_tool.rs  select_tool.rs
plugin/standard-tool-plugin/src/tool/draw_tool/: click_draw_tool.rs  move_draw_tool.rs
plugin/standard-tool-plugin/src/tool/draw_tool/click_draw_tool/: render.rs
plugin/standard-tool-plugin/src/tool/draw_tool/move_draw_tool/: render.rs
plugin/standard-tool-plugin/src/tool/select_tool/: render.rs  selection.rs
rendering/: Cargo.toml
rendering/src/: canvas_renderer.rs  lib.rs  renderer.rs
rendering/src/renderer/: bitmap_renderer.rs  svg_renderer.rs
src/: lib.rs  view_port.rs
view-port/: Cargo.toml
view-port/src/: lib.rs  tool.rs  view_port.rs
view-port/src/tool/: click_draw_tool.rs  drag_tool.rs  mouse_events.rs  move_draw_tool.rs  select_tool.rs
view-port/src/view_port/: element.rs  element_id.rs  element_view.rs  traits.rs
web/: Cargo.toml
web/src/: lib.rs
whiteboard/: Cargo.toml
whiteboard/src/: canvas_renderer.rs  element_id.rs  lib.rs  svg_renderer.rs
whiteboard/src/renderer/: canvas_renderer.rs  svg_renderer.rs
www/: index.html  index.js  package-lock.json  package.json  run.sh
(+166 files in other folders)
