[package]
name = "graphics-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "id-derive",
    "algebra",
    "geometry",
    "parametric"
, "model"]

[dependencies]
algebra = { path = "algebra" }
geometry = { path = "geometry" }
parametric = { path = "parametric" }
serde = { version = "1.0.228", features = ["derive"] }
