[package]
name = "standard-entity-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../lib/core" }
core-derive = { path = "../../lib/core-derive" }
geometry = { path = "../../lib/geometry" }
standard-rendering-plugin = { path = "../standard-rendering-plugin" }
standard-tool-plugin = { path = "../standard-tool-plugin" }
getter-methods = "1.1.0"
