[package]
name = "standard-entity-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
getter-methods = "1.1.0"

algebra = { path = "../../lib/algebra" }
geometry = { path = "../../lib/geometry" }
entity-model-feature = { path = "../../lib/entity-model-feature" }
entity-model-feature-derive = { path = "../../lib/entity-model-feature-derive" }
standard-feature-plugin = { path = "../../plugin/standard-feature-plugin" }
standard-svg-plugin = { path = "../../plugin/standard-svg-plugin" }
standard-rendering-plugin = { path = "../standard-rendering-plugin" }
standard-tool-plugin = { path = "../standard-tool-plugin" }
serde = { version = "1.0.219", features = ["derive"] }
dyn_serde = "1.0.2"
