[package]
name = "standard-rendering-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

algebra = { path = "../../lib/algebra" }
entity-model-feature = { path = "../../lib/entity-model-feature" }
entity-model-feature-derive = { path = "../../lib/entity-model-feature-derive" }
geometry = { path = "../../lib/geometry" }
