[package]
name = "standard-tool-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = { path = "../../lib/geometry" }
entity-model-feature = { path = "../../lib/entity-model-feature" }
entity-model-feature-derive = { path = "../../lib/entity-model-feature-derive" }
event-handler = { path = "../../lib/event-handler" }
standard-rendering-plugin = { path = "../standard-rendering-plugin" }
